클러스터 보고서 주석

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -328,7 +328,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <div class="bg-light text-center py-3 my-3">
+                        <div class="bd-callout bd-callout-info text-center py-3 my-3">
                           <small>주문확인 메일 열람율은 클러스터 1-d(70% 이상), 1-a(약 30%), 2-a(약 24%)에서 비교적 높게 나타남.<br/>
                           주문채널은 총 12개의 클러스터 중, mobile이 7개, write(수기)가 3개, pc가 3개이 클러스터에서 선호되고 있음.</small>
                         </div>
@@ -488,7 +488,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <div class="bg-light text-center py-3 my-3">
+                        <div class="bd-callout bd-callout-info text-center py-3 my-3">
                           <small class="text-center">업종 1위부터 3위까지 일반한식/백반, 중국음식, 라면김밥분식이 클러스터별로 거의 동일하게 들어있음.<br/>
                           이에 따라, 대체로 한식(분식) 용기와 중식 용기가 선호상품 카테고리로 꼽히고 있으나, 클러스터별로 세부 품목은 조금씩 다르게 나타남.</small>
                         </div>
@@ -714,7 +714,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <div class="bg-light text-center py-3 my-3">
+                        <div class="bd-callout bd-callout-info text-center py-3 my-3">
                           <small>총 거래기간을 보면 클러스터 1-b, 1-a, 1-d 순으로 오래됨을 알 수 있음.<br/>
                           그 중에서도 1-b, 1-d는 최근 3개월간 2회 이상 구매한 회원 수가 가장 많아, 오랫동안 변함없이 구매하는 고객군이라고 볼 수 있음.<br />
                           반면, '1회 구매 후 최근 3개월 간 거래가 없는 회원수'를 볼 때, 클러스터 4-a, 4-b, 4-c는 이탈 가능성이 높은 고객군이라고 볼 수 있음.</small>
@@ -883,7 +883,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <div class="bg-light text-center py-3 my-3">
+                        <div class="bd-callout bd-callout-info text-center py-3 my-3">
                           <small>거주지역 1위 중에서는 총 12개 클러스터 중, 5개의 클러스터에서 '경남 창원시'가 가장 많음.</small>
                         </div>
                       </div>
