클러스터 이미지 추가

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -116,7 +116,9 @@
                       <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="row pb-2" style="height: 120px;">
                           <div class="col-lg-4 col-md-4 col-sm-4 px-1">
-                            <div class="border h-100">이미지1</div>
+                            <div class="border h-100">
+                              <img src="/packus/web/img/cluster/class1_cluster.png" width="120" height="100" alt="클라스1 클러스터" />
+                            </div>
                           </div>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <ul>
@@ -129,7 +131,9 @@
                         </div>
                         <div class="row pb-2" style="height: 120px;">
                           <div class="col-lg-4 col-md-4 col-sm-4 px-1">
-                            <div class="border h-100">이미지2</div>
+                            <div class="border h-100">
+                              <img src="/packus/web/img/cluster/class2_cluster.png" width="120" height="100" alt="클라스2 클러스터" />
+                            </div>
                           </div>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <ul>
@@ -140,7 +144,9 @@
                         </div>
                         <div class="row pb-2" style="height: 120px;">
                           <div class="col-lg-4 col-md-4 col-sm-4 px-1">
-                            <div class="border h-100">이미지3</div>
+                            <div class="border h-100">
+                              <img src="/packus/web/img/cluster/class3_cluster.png" width="120" height="100" alt="클라스3 클러스터" />
+                            </div>
                           </div>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <ul>
@@ -151,7 +157,9 @@
                         </div>
                         <div class="row pb-2" style="height: 120px;">
                           <div class="col-lg-4 col-md-4 col-sm-4 px-1">
-                            <div class="border h-100">이미지4</div>
+                            <div class="border h-100">
+                              <img src="/packus/web/img/cluster/class4_cluster.png" width="120" height="100" alt="클라스4 클러스터" />
+                            </div>
                           </div>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <ul>
