클러스터 보고서 고객 세분화 마케팅 전략 추가

--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -4295,7 +4295,7 @@ License - nucleoapp.com/license/
   border-radius: 4rem;
   display: table;
 }
-.round-cnt .content {
+.content {
   display: table-cell; 
   vertical-align: middle;
 }
