--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -114,13 +114,13 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div class="row pb-2" style="height: 120px;">
-                          <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                        <div class="row pb-2">
+                          <div class="col-lg-5 col-md-5 col-sm-5 px-1">
                             <div class="border h-100">
-                              <img src="/packus/web/img/cluster/class1_cluster.png" width="120" height="100" alt="클라스1 클러스터" />
+                              <img src="/static/img/cluster/class1_cluster.png" width="100%" height="140" alt="클라스1 클러스터" />
                             </div>
                           </div>
-                          <div class="col-lg-8 col-md-8 col-sm-8">
+                          <div class="col-lg-7 col-md-7 col-sm-7">
                             <ul>
                               <li><small>1-a: 떠날 준비하는 충성고객(mobile 채널)<span class="float-right text-muted">115명</span></small></li>
                               <li><small>1-b: 충성고객(write 채널)<span class="float-right text-muted">231명</span></small></li>
@@ -129,39 +129,39 @@
                             </ul>
                           </div>
                         </div>
-                        <div class="row pb-2" style="height: 120px;">
-                          <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                        <div class="row pb-2">
+                          <div class="col-lg-5 col-md-5 col-sm-5 px-1">
                             <div class="border h-100">
-                              <img src="/packus/web/img/cluster/class2_cluster.png" width="120" height="100" alt="클라스2 클러스터" />
+                              <img src="/static/img/cluster/class2_cluster.png" width="100%" height="140" alt="클라스2 클러스터" />
                             </div>
                           </div>
-                          <div class="col-lg-8 col-md-8 col-sm-8">
+                          <div class="col-lg-7 col-md-7 col-sm-7">
                             <ul>
                               <li><small>2-a: 꾸준한 저텐션 고객(mobile 채널<span class="float-right text-muted">528명</span></small></li>
                               <li><small>2-b: 발길 끊은 저텐션 고객(pc 채널)<span class="float-right text-muted">772명</span></small></li>
                             </ul>
                           </div>
                         </div>
-                        <div class="row pb-2" style="height: 120px;">
-                          <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                        <div class="row pb-2">
+                          <div class="col-lg-5 col-md-5 col-sm-5 px-1">
                             <div class="border h-100">
-                              <img src="/packus/web/img/cluster/class3_cluster.png" width="120" height="100" alt="클라스3 클러스터" />
+                              <img src="/static/img/cluster/class3_cluster.png" width="100%" height="140" alt="클라스3 클러스터" />
                             </div>
                           </div>
-                          <div class="col-lg-8 col-md-8 col-sm-8">
+                          <div class="col-lg-7 col-md-7 col-sm-7">
                             <ul>
                               <li><small>3-a: 아직 미련남은 저텐션(write 채널)<span class="float-right text-muted">185명</span></small></li>
                               <li><small>3-b: 긴가민가하다 떠나버린 고객(pc 채널)<span class="float-right text-muted">1007명</span></small></li>
                             </ul>
                           </div>
                         </div>
-                        <div class="row pb-2" style="height: 120px;">
-                          <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                        <div class="row pb-2">
+                          <div class="col-lg-5 col-md-5 col-sm-5 px-1">
                             <div class="border h-100">
-                              <img src="/packus/web/img/cluster/class4_cluster.png" width="120" height="100" alt="클라스4 클러스터" />
+                              <img src="/static/img/cluster/class4_cluster.png" width="100%" height="140" alt="클라스4 클러스터" />
                             </div>
                           </div>
-                          <div class="col-lg-8 col-md-8 col-sm-8">
+                          <div class="col-lg-7 col-md-7 col-sm-7">
                             <ul>
                               <li><small>4-a: 단발성 쇼퍼(pc 채널)<span class="float-right text-muted">941명</span></small></li>
                               <li><small>4-b: 단발성 쇼퍼(mobile 채널)<span class="float-right text-muted">691명</span></small></li>
@@ -746,8 +746,8 @@
                     </div>
                     <div class="row">
                       <div class="col-lg-4 col-md-4 col-sm-4">
-                        <p><small>전체회원 거주지역 분포(상위 30%)</small></p>
-                        <canvas id="myChart_cluster1"></canvas>
+                        <p><small>전체회원 거주지역 분포(상위 30%, 명)</small></p>
+                        <canvas id="myChart_cluster1" style="height: 100%;"></canvas>
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-8">
                         <table class="table table-striped table-sm text-center">
@@ -1234,14 +1234,112 @@
                   </div>
                 </div>
 
-                
+                <div class="card card-stats">
+                  <div class="card-header border-bottom py-2">
+                    <h6 class="p-1 m-0">고객 세분화를 통한 마케팅 전략</h6>
+                  </div>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="my-1">
+                          <p>세분화 된 고객군에 맞는 마케팅 전략 방향 제안</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-3 col-md-3 col-sm-3 p-1">
+                        <div class="border text-center d-table w-100" style="background-color: #6c757d; height: 65px;">
+                          <div class="content">
+                            <p class="m-0"><small>걸음마 고객</small></p>
+                            <p class="m-0"><small>딱 한번 구매한 고객</small></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3 p-1">
+                        <div class="border text-center d-table w-100" style="background-color: #9a9a9a; height: 65px;">
+                          <div class="content">
+                            <p class="m-0"><small>일반 고객</small></p>
+                            <p class="m-0"><small>2회 이상 구매했으나<br/>구매금액은 많지 않은 고객</small></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3 p-1">
+                        <div class="border text-center d-table w-100" style="background-color: #ddd; height: 65px;">
+                          <div class="content">
+                            <p class="m-0"><small>우수 고객</small></p>
+                            <p class="m-0"><small>비교적 오랜 기간 거래해 온 고객</small></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3 p-1 d-flex">
+                        <div class="w-50">
+                          <div class="border text-center bg-info d-table w-100" style="height: 65px;">
+                            <div class="content">
+                              <p class="m-0"><small>최우수 고객</small></p>
+                              <p class="m-0"><small>거래의 최근성, 횟수, 금액면에서 모두 우수한 고객</small></p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="w-50">
+                          <div class="border text-center bg-info d-table w-100" style="height: 65px;">
+                            <div class="content">
+                              <p class="m-0"><small>VIP</small></p>
+                              <p class="m-0"><small>거래의 최근성, 횟수, 금액면에서 가장 우수한 고객</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
 
+                    <div class="row">
+                      <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="border bg-light text-center d-table w-100" style="height: 150px;">
+                          <div class="content">
+                            <ul>
+                              <li>상품구매를 활성화시키기 위한 인센티브 마케팅</li>
+                              <li>선호채널에 대한 편의 서비스 제공</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="border bg-light text-center d-table w-100" style="height: 150px;">
+                          <div class="content px-2">
+                            <ul>
+                              <li>고객에 대한 우대 정책 및 통합관리 시작</li>
+                              <li>고객의 기호에 맞는 차별화 서비스 제공</li>
+                              <li>다양한 채널에 연계한 고객서비스 개시</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="border bg-light text-center d-table w-100" style="height: 150px;">
+                          <div class="content px-2">
+                            <ul>
+                              <li>고객특성에 맞는 개인화 서비스</li>
+                              <li>상품/서비스의 차별화</li>
+                              <li>이탈고객 방지를 위한 다각적인 프로모션</li>
+                              <li>고객정보를 기반으로 proactive한 고객응대</li>
+                              <li>고객의 수익성을 향상시키기 위한 서비스 제공</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="border bg-light text-center d-table w-100" style="height: 150px;">
+                          <div class="content px-2">
+                            <ul>
+                              <li>상품 설계/서비스 개선 시 참여 제안</li>
+                              <li>수익성에 기반한 이탈방지 프로그램 제공</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div> 
+                  </div>
+                </div>
               </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-              
-            </div>
           </div>
       </div>
 {% endblock %}
