--- a/packus/web/templates/okpos/area.html
+++ b/packus/web/templates/okpos/area.html
@@ -1,1 +1,4 @@
-<iframe src="https://ap-northeast-2.quicksight.aws.amazon.com/sn/dashboards/179b05c0-2279-4a0f-8136-25d724d904e3/sheets/179b05c0-2279-4a0f-8136-25d724d904e3_d01af2c5-e31e-44a0-b0d3-ec48aed586ef" height="100%" width="100%" frameborder="0"></iframe>
+
+    <div id="dashboardContainer">
+        <iframe src="https://ap-northeast-2.quicksight.aws.amazon.com/sn/dashboards/179b05c0-2279-4a0f-8136-25d724d904e3/sheets/179b05c0-2279-4a0f-8136-25d724d904e3_d01af2c5-e31e-44a0-b0d3-ec48aed586ef" height="100%" width="100%" frameborder="0"></iframe>
+    </div>
