--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -1404,8 +1404,8 @@ h4, .h4 {
     margin-top: -10px; }
 
 h5, .h5 {
-  font-size: 1.57em;
-  line-height: 1.4em;
+  font-size: 1.25em;
+  line-height: 1.15em;
   margin-bottom: 15px; }
 
 h6, .h6 {
@@ -3644,7 +3644,9 @@ License - nucleoapp.com/license/
   margin-bottom: 20px;
   position: relative;
   border: 0 none;
-  transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1), box-shadow 200ms ease; }
+  transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1), box-shadow 200ms ease; 
+  
+  min-width: 940px;}
   .card .card-body {
     padding: 15px 15px 10px 15px; }
     .card .card-body.table-full-width {
@@ -4288,26 +4290,24 @@ License - nucleoapp.com/license/
   border-top-color: #5bc0de;
 }
 .card ul li {
-  font-size: .75rem;
+  font-size: .8rem;
 }
 .round-cnt {
   height: 120px; 
-  border-radius: 4rem;
+  border-radius: 50rem!important;
   display: table;
 }
-.content {
+.vertical-content {
   display: table-cell; 
   vertical-align: middle;
 }
 .gather-box {
-  height: 300px; 
   display: table-cell; 
   vertical-align: middle;
 }
 .card-body .form-group p {
   font-size: 12px;
 }
-
 
 
 
