--- a/packus/web/templates/base.html
+++ b/packus/web/templates/base.html
@@ -31,9 +31,12 @@
 <!--<script src="/static/js/demo.js" type="text/javascript"></script>-->
 <!--<script src="/static/js/paper-dashboard.min.js" type="text/javascript"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+<script src="https://unpkg.com/amazon-quicksight-embedding-sdk@1.0.3/dist/quicksight-embedding-js-sdk.min.js" />
+
 {% block script %}
 <script type="text/javascript">
-
+  
 </script>
 {% endblock %}
 
