--- a/packus/web/templates/okpos/goal.html
+++ b/packus/web/templates/okpos/goal.html
@@ -1,1 +1,1 @@
-<iframe src="https://datastudio.google.com/reporting/877f0e50-41d1-461e-b61c-5efb6c1c23ce/page/6zXD" height="450" width="600" frameborder="0" allowfullscreen></iframe>
+<iframe width="90%" height="90%" src="https://datastudio.google.com/embed/reporting/877f0e50-41d1-461e-b61c-5efb6c1c23ce/page/6zXD" frameborder="0" style="border:0" allowfullscreen></iframe>
