세그먼트 생성페이지 분석기간 추가

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -21,7 +21,7 @@
         </div>
       </nav>
       <!-- End Navbar -->
-      <div class="content">
+      <div class="content cluster">
           <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card card-stats">
@@ -1011,8 +1011,8 @@
 
                     <div class="row mb-3">
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 9%</li>
                             <li>약 447일간 거래 중</li>
                             <li>연간 37만원 정도 구매함</li>
@@ -1038,8 +1038,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 13%</li>
                             <li>약 196일간 거래 중</li>
                             <li>연간 12만원 정도 구매함</li>
@@ -1065,8 +1065,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 3%</li>
                             <li>약 264일간 거래 중</li>
                             <li>연간 17만원 정도 구매함</li>
@@ -1092,8 +1092,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 17%</li>
                             <li>약 49일간 거래 중</li>
                             <li>가입하고 바로 첫 구매</li>
@@ -1121,8 +1121,8 @@
 
                     <div class="row mb-3">
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 16%</li>
                             <li>가입하고 바로 1회 구매해 본 후 최근 1년간 구매 이력 없음</li>
                             <li>주로 pc로 구매</li>
@@ -1145,8 +1145,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 12%</li>
                             <li>가입하고 바로 1회 구매해 본 후 최근 1년간 구매 이력 없음</li>
                             <li>주로 모바일로 구매</li>
@@ -1169,8 +1169,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 3%</li>
                             <li>가입하고 바로 1회, 10만원어치 구매 후 최근 3개월간 구매 이력 없음</li>
                             <li>주로 수기로 구매</li>
@@ -1193,8 +1193,8 @@
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box px-2">
-                          <ul class="pl-3">
+                        <div class="bg-light gather-box px-2 h-100">
+                          <ul class="p-3">
                             <li>전체의 0.1%</li>
                             <li>가입하고 204일 후 시점인 최근 3개월간 1회, 9만원어치 구매</li>
                             <li>주로 모바일로 구매</li>
