--- a/packus/web/templates/segments/segments.html
+++ b/packus/web/templates/segments/segments.html
@@ -44,7 +44,7 @@
                             <div class="col-sm-2 text-center my-auto"><p>구매액</p></div>
                             <div class="col-sm-10">
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="sales" value="5만원 미만">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="" value="5만원 미만">
                                     <label class="form-check-label" for="priceCheck1">5만원 미만</label>
                                 </div>
                                 <div class="form-check-inline">
@@ -73,10 +73,10 @@
                             <div class="col-sm-2 text-center my-auto"><p>분석기간</p></div>
                             <div class="col-sm-10">
                                 <div class="form-group">
-                                    <input type="date" class="form-control p-2" name="period" id="periodFrom" style="font-size: 12px!important;">
+                                    <input type="date" class="form-control p-2" name="periodFrom" id="periodFrom" style="font-size: 12px!important;">
                                 </div>
                                 <div class="form-group">
-                                    <input type="date" class="form-control p-2" name="period" id="periodTo" style="font-size: 12px!important;">
+                                    <input type="date" class="form-control p-2" name="periodTo" id="periodTo" style="font-size: 12px!important;">
                                 </div>
                             </div>
                         </div>
