세그먼트 생성 분석기간 추가(수정2)

--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -4310,6 +4310,12 @@ License - nucleoapp.com/license/
 .card-body .form-group p {
   font-size: 12px;
 }
+.chart-container2 {
+  margin: auto;
+  height: 80vh;
+  width: 30vw;
+  position: relative;
+}
 
 
 
