--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -736,9 +736,9 @@
                   </div>
                   <div class="card-body">
                     <div class="row">
-                      <div class="col-lg-4 col-md-4 col-sm-4">
-                        <p><small>전체회원 거주지역 분포(상위 30%, 명)</small></p>
-                        <canvas id="myChart_cluster1"></canvas>
+                      <div class="col-md-4">
+                        <p class="mt-2 chartTitle"><small>전체회원 거주지역 분포(상위 30%, 명)</small></p>
+                        <div class="chart-container2" style="max-width: 530px;"><canvas id="myChart_cluster1"></canvas></div>
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-8">
                         <table class="table table-striped table-sm text-center">
