검수요청 후 수정작업 중 커밋

--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -20,7 +20,7 @@
         <div class="col-md-12 col-sm-12">
             <div class="card mt-1">
                 <div class="card-body">
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
                                 <label for="termSelectFrom">분석기간 선택</label>
@@ -33,7 +33,7 @@
                                 <input type="date" class="form-control mt-2" name="to" id="termSelectTo">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
