패커스 세그먼트 생성 에러 수정 후 커밋

--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -130,7 +130,7 @@
       </div>
     </div>
 
-    <div class="main-panel">
+    <div class="main-panel h-100">
       {% if menu == 'segments' %}
         {% include "segments/segments.html" %}
       {% elif menu == 'seg_reports' %}
