--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -3001,7 +3001,8 @@ License - nucleoapp.com/license/
 .wrapper {
   position: relative;
   top: 0;
-  height: 100vh; }
+  height: 100vh;
+ }
   .wrapper.wrapper-full-page {
     min-height: 100vh;
     height: auto; }
