--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -77,7 +77,7 @@
                         <canvas id="myChart1"></canvas>
                     </div>
                     <div class="col w-50" style="border: 1px solid #eee;">
-                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">전체 회원 대비 비율</p>
+                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">전체 회원 대비 비율(%)</p>
                         <canvas id="myChart2"></canvas>
                     </div>
                 </div>
