--- a/packus/web/templates/segments/segments.html
+++ b/packus/web/templates/segments/segments.html
@@ -44,7 +44,7 @@
                             <div class="col-sm-2 text-center my-auto"><p>구매액</p></div>
                             <div class="col-sm-10">
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="" value="5만원 미만">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="sales" value="5만원 미만">
                                     <label class="form-check-label" for="priceCheck1">5만원 미만</label>
                                 </div>
                                 <div class="form-check-inline">
