패커스 사이드바 내부 보고서 단어 삭제

--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -34,7 +34,7 @@
                       class="active"
                     {% endif %}
                   >
-                  <a href="/rfm/model" class="p-0 mt-0">―   RFM 모델 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                  <a href="/rfm/model" class="p-0 mt-0">―   RFM 모델<span class="sub_icon fa fa-hdd-o"></span></a>
                 </li>
             </ul>
             <ul class="sub-menu mt-0">
@@ -43,7 +43,7 @@
                       class="active"
                     {% endif %}
                   >
-                  <a href="/rfm/cluster" class="p-0 mt-0">―   클러스터 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                  <a href="/rfm/cluster" class="p-0 mt-0" id="cluster-report">―   클러스터<span class="sub_icon fa fa-hdd-o"></span></a>
                 </li>
             </ul>
           </li>
@@ -71,7 +71,7 @@
                         class="active"
                       {% endif %}
                     >
-                    <a href="/segments/seg_reports" class="p-0 mt-0">―   세그먼트 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                    <a href="/segments/seg_reports" class="p-0 mt-0">―   세그먼트<span class="sub_icon fa fa-hdd-o"></span></a>
                 </li>
             </ul>
           </li>
@@ -97,21 +97,21 @@
                               class="active"
                             {% endif %}
                           >
-                          <a href="/okpos/total" class="p-0 mt-0">―   Total 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                          <a href="/okpos/total" class="p-0 mt-0">―   Total<span class="sub_icon fa fa-hdd-o"></span></a>
                       </li>
                       <li class="sub-sidebar-brand"
                           {% if menu == 'upjong' %}
                               class="active"
                             {% endif %}
                           >
-                          <a href="/okpos/upjong" class="p-0 mt-0">―   업종별 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                          <a href="/okpos/upjong" class="p-0 mt-0">―   업종별<span class="sub_icon fa fa-hdd-o"></span></a>
                       </li>
                       <li class="sub-sidebar-brand"
                           {% if menu == 'area' %}
                               class="active"
                             {% endif %}
                           >
-                          <a href="/okpos/area" class="p-0 mt-0">―   지역별 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                          <a href="/okpos/area" class="p-0 mt-0">―   지역별<span class="sub_icon fa fa-hdd-o"></span></a>
                       </li>
                   </ul>
                 </li>
@@ -122,7 +122,7 @@
                         class="active"
                       {% endif %}
                     >
-                    <a href="/okpos/goal" class="p-0 mt-0">―   목표달성 보고서<span class="sub_icon fa fa-hdd-o"></span></a>
+                    <a href="/okpos/goal" class="p-0 mt-0">―   목표달성<span class="sub_icon fa fa-hdd-o"></span></a>
                 </li>
             </ul>
           </li>
