--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -68,107 +68,133 @@
     </div>
     <div class="d-none" id="chartContainer"> 
     <hr />
-    <div class="row">
-        <div class="col-md-12 col-sm-12">
-            <div class="card">
-                <div class="card-body d-flex">
-                    <div class="col w-50" style="border: 1px solid #eee;">
-                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">선택한 세그먼트별 회원 수(명)</p>
-                        <canvas id="myChart1"></canvas>
-                    </div>
-                    <div class="col w-50" style="border: 1px solid #eee;">
-                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">전체 회원 대비 비율(%)</p>
-                        <canvas id="myChart2"></canvas>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr />
-     <div class="row">
-        <div class="col-md-12 col-sm-12">
-            <div class="card">
-                <div class="card-body">
-                    <table class="table table-striped text-center" id="rfm-tb">
-                      <thead class="border-top">
-                        <tr>
-                          <th scope="col">모델명</th>
-                          <th scope="col">회원수</th>
-                          <th scope="col">Recency</th>
-                          <th scope="col">Frequency</th>
-                          <th scope="col">Monetary</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row"></th>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                      </tr>
-                      <tr>
-                          <th scope="row"></th>
-                          <td></td>
-                          <td></td>
-                          <td><td>
-                          <td></td>
-                      </tr>
-                      <tr>
-                          <th scope="row"></th>
-                          <td></td>
-                          <td></td>
-                          <td><td>
-                          <td></td>
-                      </tr>
-                      </tbody>
-                    </table>
-                    <div class="row mx-1 my-4">
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Recency</p>
-                            <canvas id="myChart3"></canvas>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="card-body d-flex">
+                        <div class="col w-50" style="border: 1px solid #eee;">
+                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">선택한 세그먼트별 회원 수(명)</p>
+                            <canvas id="myChart1"></canvas>
                         </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Frequency</p>
-                            <canvas id="myChart4"></canvas>
-                        </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Monetary</p>
-                            <canvas id="myChart5"></canvas>
-                        </div>
-                    </div>
-                    <div class="row mx-1 my-4">
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Recency</p>
-                            <canvas id="myChart6"></canvas>
-                        </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Frequency</p>
-                            <canvas id="myChart7"></canvas>
-                        </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Monetary</p>
-                            <canvas id="myChart8"></canvas>
-                        </div>
-                    </div>
-                    <div class="row mx-1 my-4">
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Recency</p>
-                            <canvas id="myChart9"></canvas>
-                        </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Frequency</p>
-                            <canvas id="myChart10"></canvas>
-                        </div>
-                        <div class="col-md-4" style="border: 1px solid #eee;">
-                            <p class="mt-2 chartTitle">Monetary</p>
-                            <canvas id="myChart11"></canvas>
+                        <div class="col w-50" style="border: 1px solid #eee;">
+                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">전체 회원 대비 비율(%)</p>
+                            <canvas id="myChart2"></canvas>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table table-striped text-center" id="rfm-tb">
+                            <thead class="border-top">
+                            <tr>
+                                <th scope="col">모델명</th>
+                                <th scope="col">회원수</th>
+                                <th scope="col">Recency</th>
+                                <th scope="col">Frequency</th>
+                                <th scope="col">Monetary</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row"></th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row"></th>
+                                <td></td>
+                                <td></td>
+                                <td><td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row"></th>
+                                <td></td>
+                                <td></td>
+                                <td><td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="row mx-1 my-4">
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Recency</p>
+                                <canvas id="myChart3"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Frequency</p>
+                                <canvas id="myChart4"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Monetary</p>
+                                <canvas id="myChart5"></canvas>
+                            </div>
+                        </div>
+                        <div class="row mx-1 my-4">
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Recency</p>
+                                <canvas id="myChart6"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Frequency</p>
+                                <canvas id="myChart7"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Monetary</p>
+                                <canvas id="myChart8"></canvas>
+                            </div>
+                        </div>
+                        <div class="row mx-1 my-4">
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Recency</p>
+                                <canvas id="myChart9"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Frequency</p>
+                                <canvas id="myChart10"></canvas>
+                            </div>
+                            <div class="col-md-4" style="border: 1px solid #eee;">
+                                <p class="mt-2 chartTitle">Monetary</p>
+                                <canvas id="myChart11"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="card card-stats">
+                <div class="card-header border-bottom py-3 countCardHeader" style="height: 52px!important;">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <p class="m-0" style="font-size: 16px;">고객 리스트</p>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-sm-7">
+                            <div class="form-group">
+                                <select class="form-control-sm w-100" id="segmentSelectML">
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-1 col-md-1 col-sm-1">
+                            <button class="btn btn-primary m-0 btn-sm" id="seg-memlist" onclick="">조회</button>
+                        </div>
+                </div>
+                </div>
+                <div class="card-body countCardBody" style="height: 540px; margin-top: -61px !important;" id="segmentMemberList">
+                   
+                </div>
+              </div>
+            </div>
+        </div>
     </div>
 </div>
 
