--- a/packus/web/templates/segments/segments.html
+++ b/packus/web/templates/segments/segments.html
@@ -44,27 +44,27 @@
                             <div class="col-sm-2 text-center my-auto"><p>구매액</p></div>
                             <div class="col-sm-10">
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="sales" value="5만원 미만">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck1" name="sales" value="0~50000원">
                                     <label class="form-check-label" for="priceCheck1">5만원 미만</label>
                                 </div>
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck2" name="sales" value="5만원 - 15만원">
-                                    <label class="form-check-label" for="priceCheck2">5만원 - 15만원</label>
+                                    <input class="form-check-input" type="checkbox" id="priceCheck2" name="sales" value="50000~150000원">
+                                    <label class="form-check-label" for="priceCheck2">5 - 15만원</label>
                                 </div>
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck3" name="sales" value="15 - 30만원">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck3" name="sales" value="150000~300000원">
                                     <label class="form-check-label" for="priceCheck3">15 - 30만원</label>
                                 </div>
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck4" name="sales" value="30 - 50만원">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck4" name="sales" value="300000~500000원">
                                     <label class="form-check-label" for="priceCheck4">30 - 50만원</label>
                                 </div>
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck5" name="sales" value="50 - 100만원">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck5" name="sales" value="500000~1000000원">
                                     <label class="form-check-label" for="priceCheck5">50 - 100만원</label>
                                 </div>
                                 <div class="form-check-inline">
-                                    <input class="form-check-input" type="checkbox" id="priceCheck6" name="sales" value="100만원 이상">
+                                    <input class="form-check-input" type="checkbox" id="priceCheck6" name="sales" value="1000000~원">
                                     <label class="form-check-label" for="priceCheck6">100만원 이상</label>
                                 </div>
                             </div>
