분석기간 텍스트 추가+rfm모델 내부 텍스트 수정

--- a/packus/web/templates/rfm/model.html
+++ b/packus/web/templates/rfm/model.html
@@ -38,7 +38,7 @@
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
                   <div class="card-header border-bottom py-2 countCardHeader">
-                    <p class="m-0" style="font-size: 16px;">평균 구매 일</p>
+                    <p class="m-0" style="font-size: 16px;">최근 구매 일(Median)</p>
                   </div>
                   <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="https://52.78.186.240/s/packus/app/kibana#/dashboard/b1dfbf10-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
@@ -48,7 +48,7 @@
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
                   <div class="card-header border-bottom py-2 countCardHeader">
-                    <p class="m-0" style="font-size: 16px;">평균 구매 횟수</p>
+                    <p class="m-0" style="font-size: 16px;">총 구매 횟수(Median)</p>
                   </div>
                   <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="https://52.78.186.240/s/packus/app/kibana#/dashboard/c1207870-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
@@ -58,7 +58,7 @@
               <div class="col-lg-3 col-md-3 col-sm-6">       
                 <div class="card card-stats">
                   <div class="card-header border-bottom py-2 countCardHeader">
-                    <p class="m-0" style="font-size: 16px;">평균 구매 지출액</p>
+                    <p class="m-0" style="font-size: 16px;">총 지출액(Median)</p>
                   </div>
                   <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="https://52.78.186.240/s/packus/app/kibana#/dashboard/f4312200-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
