패커스 검수에 따른 수정작업 후 커밋

--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="card ">
-                <iframe frameborder="0" src="http://52.78.186.240/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%" style="border-radius: .8rem;"></iframe>
+                <iframe frameborder="0" src="https://52.78.186.240/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%" style="border-radius: .8rem;"></iframe>
             </div>
         </div>
       </div>
