--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -82,44 +82,46 @@
             >
             <a href="/event/total" id="pills-segments">
               <i class="nc-icon nc-spaceship"></i>
-              <p>Event</p>
+              <p>광고 Event Tracking</p>
             </a>
             <ul class="sub-menu mt-0">
-              <li class="sub-sidebar-brand"
-                  {% if menu == 'total' %}
-                      class="active"
-                    {% endif %}
-                  >
-                  <a href="/event/total" class="p-0 mt-0">―   Total<span class="sub_icon fa fa-hdd-o"></span></a>
-              </li>
-              <li class="sub-sidebar-brand"
-                  {% if menu == 'upjong' %}
-                      class="active"
-                    {% endif %}
-                  >
-                  <a href="/event/upjong" class="p-0 mt-0">―   업종별<span class="sub_icon fa fa-hdd-o"></span></a>
-              </li>
-              <li class="sub-sidebar-brand"
-                  {% if menu == 'area' %}
-                      class="active"
-                    {% endif %}
-                  >
-                  <a href="/event/area" class="p-0 mt-0">―   지역별<span class="sub_icon fa fa-hdd-o"></span></a>
-              </li>
               <li class="sub-sidebar-brand"
                 {% if menu == 'catalog' %}
                     class="active"
                   {% endif %}
                 >
-                <a href="/event/ad/catalog" class="p-0 mt-0">―   광고 Event<span class="sub_icon fa fa-hdd-o"></span></a>
+                <a href="/event/total" class="p-0 mt-0">―   전체 개요<span class="sub_icon fa fa-hdd-o"></span></a>
                 <ul class="sub-menu mt-0">
                   <li class="sub-sidebar-brand"
-                      {% if menu == 'catalog' %}
+                      {% if menu == 'total' %}
                           class="active"
                         {% endif %}
                       >
-                      <a href="/event/ad/catalog" class="p-0 mt-0">―   카달로그<span class="sub_icon fa fa-hdd-o"></span></a>
+                      <a href="/event/total" class="p-0 mt-0">―   Total<span class="sub_icon fa fa-hdd-o"></span></a>
                   </li>
+                  <li class="sub-sidebar-brand"
+                      {% if menu == 'upjong' %}
+                          class="active"
+                        {% endif %}
+                      >
+                      <a href="/event/upjong" class="p-0 mt-0">―   업종<span class="sub_icon fa fa-hdd-o"></span></a>
+                  </li>
+                  <li class="sub-sidebar-brand"
+                      {% if menu == 'area' %}
+                          class="active"
+                        {% endif %}
+                      >
+                      <a href="/event/area" class="p-0 mt-0">―   지역<span class="sub_icon fa fa-hdd-o"></span></a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-sidebar-brand"
+                {% if menu == 'sample' %}
+                    class="active"
+                  {% endif %}
+                >
+                <a href="/event/ad/sample" class="p-0" style="margin-top: 67px!important;">―   OKPOS 정기 Event<span class="sub_icon fa fa-hdd-o"></span></a>
+                <ul class="sub-menu mt-0">
                   <li class="sub-sidebar-brand"
                       {% if menu == 'sample' %}
                           class="active"
@@ -134,14 +136,21 @@
                       >
                       <a href="/event/ad/order" class="p-0 mt-0">―   소량주문<span class="sub_icon fa fa-hdd-o"></span></a>
                   </li>
+                  <li class="sub-sidebar-brand"
+                    {% if menu == 'shop' %}
+                        class="active"
+                      {% endif %}
+                    >
+                    <a href="/event/ad/shop" class="p-0 mt-0">―   언택트 장보기<span class="sub_icon fa fa-hdd-o"></span></a>
+                  </li>
                 </ul>
               </li>
               <li class="sub-sidebar-brand"
-                  {% if menu == 'shop' %}
+                  {% if menu == 'catalog' %}
                       class="active"
                     {% endif %}
                   >
-                  <a href="/event/shop" class="p-0" style="margin-top: 60px;">―   언택트 장보기<span class="sub_icon fa fa-hdd-o"></span></a>
+                  <a href="/event/ad/catalog" class="p-0" style="margin-top: 67px!important;">―   카달로그 Event<span class="sub_icon fa fa-hdd-o"></span></a>
               </li>
             </ul>
           </ul>
